# gurufocus_api

./: .gitignore  Cargo.toml  FinancialDataSynopsis.ods  README.md  ReleaseHistory.txt
examples/: 02_financials.rs  03_keyratios.rs  04_quotes.rs  05a_price_history.rs  05b_price_history_unadj.rs  06_stock_summary.rs  07_guru_trades.rs  08_insider_trades.rs  09_gurulist.rs  10_guru_picks.rs  11_guru_portfolios.rs  12_exchanges.rs  13_stocklist.rs  14_insider_updates.rs  15_dividend_history.rs  16_analyst_estimate.rs  17_personal_portfolio.rs  18_fundamentals_update.rs  19_politicianlist.rs  20_politician_transactions.rs  exchanges.rs  financials.rs  gurulist.rs  quotes.rs  stocklist.rs
src/: financials.rs  gurus.rs  hexnum.rs  insiders.rs  keyratios.rs  lib.rs  portfolio.rs  stock.rs  strnum.rs
