[package]
name = "gurufocus_api"
version = "0.6.1"
authors = ["Mark Beinker <mwb@quantlink.de>"]
edition = "2018"
description = "A rust adapter to the GuruFocus API, a provider of financial data."
license = "MIT OR Apache-2.0"
repository = "https://github.com/xemwebe/gurufocus_api"
readme = "README.md"
keywords = ["finance", "gurufocus", "stock", "company", "share"]
categories = ["api-bindings"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.17", features=["rt-multi-thread", "macros"]}
tokio-compat-02 = "0.2.0"
thiserror = "1.0"
